--- a/ProAcc/Views/Assessment/CreateAnalysis.cshtml
+++ b/ProAcc/Views/Assessment/CreateAnalysis.cshtml
@@ -145,7 +145,7 @@
                             <table class="mb-0 table table-hover">
                                 <thead>
                                     <tr>
-                                        <th>#</th>
+                                        <th>S.No</th>
                                         <th> SAP READINESS CHECK FILES</th>
                                         <th>UPLOAD</th>
                                     </tr>
@@ -248,7 +248,7 @@
                         <div class="custom-checkbox custom-control text-md-left" style="font-size:15px;max-width:930px;padding-left:81px;">
                             <input type="checkbox" id="chkAcknowldge" class="custom-control-input">
                             <label class="custom-control-label" for="chkAcknowldge">
-                                I acknowldge all SAP employees may access and use the SAP Readiness check results for SAP business purposes like support services and marketing
+                                I acknowledge all SAP employees may access and use the SAP Readiness check results for SAP business purposes like support services and marketing
                             </label>
                         </div>
                         <br />
