--- a/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
+++ b/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
@@ -158,24 +158,28 @@
                 data: { InstaceName: InstanceName, Project_ID: Project },
                     success: function (response) {
                         if (response == "success") {
-                            $.alert({
-                                title: 'Success !',
-                                content: 'Instance Saved successfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
-                                icon: 'fa fa-rocket',
-                                animation: 'scale',
-                                closeAnimation: 'scale',
-                                buttons: {
-                                    okay: {
-                                        text: 'Okay',
-                                        btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
-                                        action: function (event, ui) {
-                                            loadInstanceTable();
+                            Notiflix.Notify.Success('Instance Saved successfully..!', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                            loadInstanceTable();
                                             $("#txtInstanceName").val("")
                                             $("#drpProject").val(0)
-                                        }
-                                    }
-                                }
-                            });
+                            //$.alert({
+                            //    title: 'Success !',
+                            //    content: 'Instance Saved successfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                            //    icon: 'fa fa-rocket',
+                            //    animation: 'scale',
+                            //    closeAnimation: 'scale',
+                            //    buttons: {
+                            //        okay: {
+                            //            text: 'Okay',
+                            //            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                            //            action: function (event, ui) {
+                            //                loadInstanceTable();
+                            //                $("#txtInstanceName").val("")
+                            //                $("#drpProject").val(0)
+                            //            }
+                            //        }
+                            //    }
+                            //});
                         }
                         else {
                             $("#lblInstanceName").html("This Instance Name is already in use for this project").show().fadeOut(5000);
@@ -225,26 +229,33 @@
                     data: { model : model},
                     success: function (response) {
                         if (response == "success") {
-                            $.alert({
-                                title: 'Success !',
-                                content: 'Instance Edited successfully..!',
-                                icon: 'fa fa-rocket',
-                                animation: 'scale',
-                                closeAnimation: 'scale',
-                                buttons: {
-                                    okay: {
-                                        text: 'Okay',
-                                        btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
-                                        action: function (event, ui) {
-                                            loadInstanceTable();
+                             Notiflix.Notify.Success('Instance Update successfully..!', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                            loadInstanceTable();
                                             $("#txtInstanceName").val("")
                                             $("#drpProject").val(0)
                                             $("#btnInstanceUpdate").hide();
                                             $("#btnInstanceCreate").show();
-                                        }
-                                    }
-                                }
-                            });
+
+                            //$.alert({
+                            //    title: 'Success !',
+                            //    content: 'Instance Edited successfully..!',
+                            //    icon: 'fa fa-rocket',
+                            //    animation: 'scale',
+                            //    closeAnimation: 'scale',
+                            //    buttons: {
+                            //        okay: {
+                            //            text: 'Okay',
+                            //            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                            //            action: function (event, ui) {
+                            //                loadInstanceTable();
+                            //                $("#txtInstanceName").val("")
+                            //                $("#drpProject").val(0)
+                            //                $("#btnInstanceUpdate").hide();
+                            //                $("#btnInstanceCreate").show();
+                            //            }
+                            //        }
+                            //    }
+                            //});
                             //alert("Instance Edited successfully!");
                             //loadInstanceTable();
                             //$("#txtInstanceName").val("")
