--- a/ProAcc/Views/Role/Create.cshtml
+++ b/ProAcc/Views/Role/Create.cshtml
@@ -92,23 +92,26 @@
                             data: { RoleName: RoleName },
                             success: function (response) {
                                 if (response == "success") {
-                                    $.alert({
-                                        title: 'Success !',
-                                        content: 'Role Saved successfully..!',
-                                        icon: 'fa fa-rocket',
-                                        animation: 'scale',
-                                        closeAnimation: 'scale',
-                                        buttons: {
-                                            okay: {
-                                                text: 'Okay',
-                                                btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
-                                                action: function (event, ui) {
-                                                    resetRole();
-                                                    loadRole();
-                                                }
-                                            }
-                                        }
-                                    });                                    
+                                    Notiflix.Notify.Success('Role Saved successfully..!', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                                    resetRole();
+                                    loadRole();
+                                    //$.alert({
+                                    //    title: 'Success !',
+                                    //    content: 'Role Saved successfully..!',
+                                    //    icon: 'fa fa-rocket',
+                                    //    animation: 'scale',
+                                    //    closeAnimation: 'scale',
+                                    //    buttons: {
+                                    //        okay: {
+                                    //            text: 'Okay',
+                                    //            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                                    //            action: function (event, ui) {
+                                    //                resetRole();
+                                    //                loadRole();
+                                    //            }
+                                    //        }
+                                    //    }
+                                    //});                                    
                                 }
                             },
                             failure: function (response) {
@@ -161,25 +164,30 @@
                     data: { model : model},
                     success: function (response) {
                         if (response == "success") {
-                            $.alert({
-                               title: 'Success !',
-                               content: 'Role Edited successfully..!',
-                               icon: 'fa fa-rocket',
-                               animation: 'scale',
-                               closeAnimation: 'scale',
-                               buttons: {
-                                  okay: {
-                                     text: 'Okay',
-                                      btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
-                                       action: function (event, ui) {
-                                          resetRole();
-                                           loadRole();
-                                           $("#RoleCreation").show();
+                             Notiflix.Notify.Success('Role Updated successfully..!', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                                    resetRole();
+                            loadRole();
+                            $("#RoleCreation").show();
                                             $("#RoleUpdation").hide();
-                                       }
-                                  }
-                               }
-                            });  
+                            //$.alert({
+                            //   title: 'Success !',
+                            //   content: 'Role Edited successfully..!',
+                            //   icon: 'fa fa-rocket',
+                            //   animation: 'scale',
+                            //   closeAnimation: 'scale',
+                            //   buttons: {
+                            //      okay: {
+                            //         text: 'Okay',
+                            //          btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                            //           action: function (event, ui) {
+                            //              resetRole();
+                            //               loadRole();
+                            //               $("#RoleCreation").show();
+                            //                $("#RoleUpdation").hide();
+                            //           }
+                            //      }
+                            //   }
+                            //});  
 
                             //alert("Role Edited successfully!");
                             //resetRole();
