--- a/ProAcc/Views/Resource/ResourceAssessment.cshtml
+++ b/ProAcc/Views/Resource/ResourceAssessment.cshtml
@@ -48,6 +48,13 @@
            height:auto;
            vertical-align:text-top;
 }
+    div.centered {
+    position: fixed;
+    top: 40%!important;
+    left: 50%!important;
+    margin-top: -50px;
+    margin-left: -100px;
+}
 </style>
 
 <div class="row">
@@ -191,30 +198,37 @@
             type: "POST",
             data: { 'IDInstance': IDInstance },
             success: function (result) {
-                $.alert({
-                    title: 'Alert !',
-                    content: 'New Live Instance updated',// <br> with some <strong>HTML</strong> <em>contents</em>',
-                    icon: 'fa fa-rocket',
-                    animation: 'scale',
-                    closeAnimation: 'scale',
-                    buttons: {
-                        okay: {
-                            text: 'Okay',
-                            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
-                            action: function (event, ui) {
-                                $(this).remove();
-                                LoadTable(IDInstance);
-                                $('#jqGrid').trigger('reloadGrid');
-                            }
-                        }
-                    }
+                Notiflix.Notify.Success('New Live Instance updated !', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                 LoadTable(IDInstance);
+        $('#jqGrid').trigger('reloadGrid');
+                   //setTimeout(Redirect, 3000);
+                //$.alert({
+                //    title: 'Alert !',
+                //    content: 'New Live Instance updated',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                //    icon: 'fa fa-rocket',
+                //    animation: 'scale',
+                //    closeAnimation: 'scale',
+                //    buttons: {
+                //        okay: {
+                //            text: 'Okay',
+                //            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                //            action: function (event, ui) {
+                //                $(this).remove();
+                               
+                //            }
+                //        }
+                //    }
 
-                });
+                //});
 
 
             }
         });
     });
+    //function Redirect() {
+    //    LoadTable(IDInstance);
+    //    $('#jqGrid').trigger('reloadGrid');
+    //}
 </script>
 
 <script>
@@ -457,6 +471,8 @@
                 },
                 beforeShowForm: function (form) {
                     //$("#PhaseId").attr("disabled", "disabled");
+
+                    $("#editmodjqGrid").addClass("centered");
                     $(".navButton").hide();
                     $("#tr_PhaseId").hide();
                     $("#tr_SequenceNum").hide();
@@ -481,6 +497,7 @@
                 closeAfterAdd: true,
                 recreateForm: true,
                 beforeShowForm: function (form) {
+                    $("#editmodjqGrid").addClass("centered");
                     $("#tr_PhaseId").hide();
                     $("#tr_SequenceNum").hide();
                     $("#tr_StatusId").hide();
